# adore

./: .gitmodules  .luaurc  CMakeLists.txt  README.md  TODO.md  build.sh  countdown.luau  main.luau
adore/blackmagic/: CMakeLists.txt  stub.cpp
adore/blackmagic/include/adore/: atem.h  blackmagic.h  hyperdeck.h  timecode.h
adore/blackmagic/src/: atem.cpp  blackmagic.cpp  hyperdeck.cpp  timecode.cpp
adore/cli/: CMakeLists.txt
adore/cli/src/: main.cpp
adore/core/: CMakeLists.txt
adore/core/include/adore/: core.h
adore/graphics/: CMakeLists.txt
adore/graphics/include/adore/: color.h  colors.h  font.h  graphics.h  image.h  rect.h  rendertexture.h  texture.h
adore/graphics/src/: color.cpp  colors.cpp  font.cpp  graphics.cpp  image.cpp  rect.cpp  rendertexture.cpp  texture.cpp
adore/gui/: CMakeLists.txt
adore/gui/include/adore/: gui.h
adore/gui/src/: gui.cpp
adore/input/: CMakeLists.txt
adore/input/include/adore/: input.h
adore/input/src/: input.cpp
adore/window/: CMakeLists.txt
adore/window/include/adore/: window.h
adore/window/src/: window.cpp
adorecue/: bufutil.luau  connector.luau  devicelist.luau  devices.luau  main.luau  operations.luau  standardoperations.luau  state.luau  timeline.luau
definitions/: atem.luau  color.luau  colors.luau  graphics.luau  gui.luau  hyperdeck.luau  input.luau  timecode.luau  window.luau
examples/aquarium/: aquarium.luau  fish.luau  main.luau
examples/christmas_candle/: main.luau
examples/delta_time/: main.luau
examples/hyperdeck_control/: cliplist.luau  main.luau  playbutton.luau
examples/hyperdeck_test/: main.luau
examples/image_exporter/: main.luau
examples/pico/: main.luau
